# dqc

./: .gitignore  README.md  pyproject.toml  setup.py
dqc/: _version.py
dqc/api/: getxc.py
dqc/datasets/lebedevdists/: lebedev_003.txt  lebedev_005.txt  lebedev_007.txt  lebedev_011.txt  lebedev_015.txt  lebedev_017.txt  lebedev_019.txt  lebedev_023.txt  lebedev_029.txt
dqc/grid/: base_grid.py  factory.py  graph_converter.py  lebedev_grid.py  multiatoms_grid.py  radial_grid.py  truncation_rules.py
dqc/hamilton/: hcgto.py  hcgto_pbc.py
dqc/qccalc/: ks.py  scf_qccalc.py
dqc/system/: mol.py
dqc/test/: test_density.py  test_grid.py  utils.py
dqc/utils/: datastruct.py
dqc/xc/: __init__.py  base_xc.py  combined_libxc.py  custom_xc.py  function_xc.py  libxc.py
testing/: graphs.py
