[tool.poetry]
name = "dqc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
xitorch = "^0.5.1"
dqclibs = "^0.1.0"
pylibxc2 = "^6.0.0"
h5py = "3.1.0"
basis-set-exchange = "^0.9.1"
torch-cluster = {path = "/home/karim/Downloads/torch_cluster-1.6.3+pt20cpu-cp38-cp38-linux_x86_64.whl"}
torch = {url = "http://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp38-cp38-linux_x86_64.whl#sha256=8046f49deae5a3d219b9f6059a1f478ae321f232e660249355a8bf6dcaa810c1"}
matplotlib = "3.7.3"
networkx = "3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
