[tool.poetry]
name = "dqc"
version = "0.1.0"
description = ""
authors = ["Karim Alaa El-Din <karim@aedin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
xitorch = "^0.5.1"
dqclibs = "^0.1.0"
pylibxc2 = "^6.0.0"
h5py = "3.1.0"
basis-set-exchange = "^0.9.1"
matplotlib = "3.7.3"
torch = ">=2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
